# golden_ratio

./: Cargo.toml  Flower-5d4410cdaa13120b.js  index.html
src/: constants.rs  egui_block_input.rs  flower.rs  main.rs  petal.rs  ui.rs
