[package]
name = "Flower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 's'
lto = "thin"

[dependencies]
bevy = { version = "0.14.0" }
bevy_egui = "0.30"
bevy_pancam = { version = "0.15", features = ["bevy_egui"] }
exmex = "0.20"
bevy_vector_shapes = "0.8.2"
bevy-inspector-egui = "0.27"

[features]
block_input = ["bevy_pancam/bevy_egui"]
